// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavbarLink render default 1`] = `
<li
  className="nav-item"
>
  <div
    data-mock="Link"
  >
    {
  "to": "/test-link"
}
  </div>
</li>
`;

exports[`NavbarLink should render active 1`] = `
<li
  className="nav-item active"
>
  <div
    data-mock="Link"
  >
    {
  "to": "/test-link"
}
  </div>
</li>
`;
